force-app/main/default/objects/tc9_edc__Setup_Exit_Mapping__mdt/tc9_edc__Setup_Exit_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Setup Exit Mapping</label>
    <pluralLabel>Setup Exit Mappings</pluralLabel>
</CustomObject>