force-app/main/default/objects/tc9_edc__Setup_Exit_Mapping__mdt/fields/tc9_edc__AU_Death_Payment_Recipient__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__AU_Death_Payment_Recipient__c</fullName>
    <label>AU Death Payment Recipient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dependant</fullName>
                <default>true</default>
                <label>Dependant</label>
            </value>
            <value>
                <fullName>Non Dependant</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>