force-app/main/default/objects/tc9_edc__Setup_Exit_Mapping__mdt/fields/tc9_edc__AU_PAYG_Withholding_Condition__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__AU_PAYG_Withholding_Condition__c</fullName>
    <label>AU PAYG Withholding Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TFN Provided</fullName>
                <default>true</default>
                <label>TFN Provided</label>
            </value>
            <value>
                <fullName>No TFN</fullName>
            </value>
            <value>
                <fullName>Working Holiday Maker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>