force-app/main/default/objects/tc9_edc__Setup_Exit_Mapping__mdt/fields/tc9_edc__AU_Working_Holiday_Maker__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__AU_Working_Holiday_Maker__c</fullName>
    <label>AU Working Holiday Maker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>