force-app/main/default/objects/tc9_edc__Setup_Exit_Mapping__mdt/fields/tc9_edc__Cessation_Category__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Cessation_Category__c</fullName>
    <label>Cessation Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
                <default>true</default>
                <label>Regular</label>
            </value>
            <value>
                <fullName>Genuine Redundancy</fullName>
            </value>
            <value>
                <fullName>Non-genuine Redundancy</fullName>
            </value>
            <value>
                <fullName>Early Retirement</fullName>
            </value>
            <value>
                <fullName>Invalidity</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>