force-app/main/default/objects/tc9_edc__Setup_Exit_Mapping__mdt/fields/tc9_edc__Mapping_Component_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Mapping_Component_Type__c</fullName>
    <label>Mapping Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Leave All Dates</fullName>
                <default>true</default>
                <label>Annual Leave All Dates</label>
            </value>
            <value>
                <fullName>Annual Leave Pre78</fullName>
            </value>
            <value>
                <fullName>Annual Leave Pre93</fullName>
            </value>
            <value>
                <fullName>Annual Leave Post93</fullName>
            </value>
            <value>
                <fullName>Leave Loading All Dates</fullName>
            </value>
            <value>
                <fullName>Leave Loading Pre93</fullName>
            </value>
            <value>
                <fullName>Leave Loading Post93</fullName>
            </value>
            <value>
                <fullName>Long Service Leave All Dates</fullName>
            </value>
            <value>
                <fullName>Long Service Leave Pre78</fullName>
            </value>
            <value>
                <fullName>Long Service Leave Pre93</fullName>
            </value>
            <value>
                <fullName>Long Service Leave Post93</fullName>
            </value>
            <value>
                <fullName>Taxable ETP</fullName>
            </value>
            <value>
                <fullName>Tax Free ETP</fullName>
            </value>
            <value>
                <fullName>Lump Sum D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>