force-app/main/default/objects/tc9_edc__Setup_Exit_Mapping__mdt/fields/tc9_edc__Setup_Group__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Setup_Group__c</fullName>
    <label>Setup Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group 1</fullName>
                <default>true</default>
                <label>Group 1</label>
            </value>
            <value>
                <fullName>Group 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>